--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -21,6 +21,10 @@ body {
     text-decoration:none;
 }
 
+.navbar-item-current {
+    background-color: rgb(212, 226, 191);
+}
+
 .navbar-item:hover {
     background-color: rgb(212, 226, 191);
 }
