--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -1,17 +1,31 @@
 body {
-    font-size: 20;
+    font-size: x-large;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+@media screen and (min-width: 800px) {
+    body {
+        font-size: large;
+    }
 }
 
 .header-navbar {
     position: sticky;
-    display: flex;
-    flex-direction:row;
-    justify-content: center;
+    display: inline;
     top: 0;
     width: 100%;
-    height: 50px;
-    background-color:rgb(236, 229, 229);
+    height: auto;
+}
+
+@media screen and (min-width: 1000px) {
+    .header-navbar {
+        display: flex;
+        flex-direction: row;
+        position: sticky;
+        top: 0;
+        width: 100%;
+        height: auto;
+    }
 }
 
 .header-navbar a {
@@ -32,7 +46,7 @@ body {
 .content {
     width: 100%;
     text-align: center;
-    padding-bottom: 2000px;
+    padding-bottom: 60px;
 }
 
 .header-img {
