--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -46,7 +46,7 @@ body {
 .content {
     width: 100%;
     text-align: center;
-    padding-bottom: 60px;
+    padding-bottom: 60gitpx;
 }
 
 .header-img {
@@ -151,4 +151,8 @@ li:first-child {
     margin-left: 0;
     margin-right: 0;
     font-weight: bold;
+}
+
+span {
+    font-style: italic;
 }
